// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip snapshots document.body when the button is focused (aria-describedby exists) 1`] = `
.c0 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  background: #212134;
  padding-block: 8px;
  padding-inline: 8px;
  border-radius: 4px;
  position: absolute;
}

.c3 {
  font-size: 1.2rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c2 {
  z-index: 4;
  display: revert;
}

<body>
  <div>
    <span>
      <button
        aria-describedby=":r2:"
        tabindex="0"
        type="button"
      >
        Show tooltip
      </button>
    </span>
    <span
      class="c0"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </span>
  </div>
  <div
    class=""
  >
    <div
      class="c1 c2"
      id=":r2:"
      role="tooltip"
      style="left: 0px; top: -8px;"
    >
      <span
        class="c0"
        id=":r3:"
      >
        Content of the tooltip fefe
      </span>
      <p
        class="c3"
      >
        Content of the tooltip fefe
      </p>
    </div>
  </div>
</body>
`;

exports[`Tooltip snapshots document.body when the tooltip is not visible but exists in the DOM 1`] = `
.c0 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  background: #212134;
  padding-block: 8px;
  padding-inline: 8px;
  border-radius: 4px;
  position: absolute;
}

.c3 {
  font-size: 1.2rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c2 {
  z-index: 4;
  display: none;
}

<body>
  <div>
    <span>
      <button
        aria-describedby=":r0:"
        tabindex="0"
        type="button"
      >
        Show tooltip
      </button>
    </span>
    <span
      class="c0"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </span>
  </div>
  <div
    class=""
  >
    <div
      class="c1 c2"
      id=":r0:"
      role="tooltip"
    >
      <p
        class="c3"
      >
        Content of the tooltip fefe
      </p>
    </div>
  </div>
</body>
`;

exports[`Tooltip snapshots document.body with a label 1`] = `
.c0 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  background: #212134;
  padding-block: 8px;
  padding-inline: 8px;
  border-radius: 4px;
  position: absolute;
}

.c3 {
  font-size: 1.2rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c2 {
  z-index: 4;
  display: revert;
}

<body>
  <div>
    <span>
      <button
        aria-labelledby=":r4:"
        tabindex="0"
        type="button"
      >
        +
      </button>
    </span>
    <span
      class="c0"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </span>
  </div>
  <div
    class=""
  >
    <div
      class="c1 c2"
      id=":r4:"
      role="tooltip"
      style="left: 0px; top: -8px;"
    >
      <span
        class="c0"
        id=":r5:"
      />
      <p
        class="c3"
      >
        Content of the tooltip fefe
      </p>
    </div>
  </div>
</body>
`;
